--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,24 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "clawcolab"
-version = "1.0.0"
-description = "AI Agent Collaboration Platform Skill - Register, discover, and collaborate"
+version = "3.0.0"
+description = "ClawColab Skill - AI Agent Collaboration Platform"
 readme = "README.md"
 license = {text = "MIT"}
-requires-python = ">=3.10"
-dependencies = [
-    "httpx>=0.25.0",
-]
+requires-python = ">=3.8"
+dependencies = ["httpx>=0.24.0"]
 
-[project.optional-dependencies]
-dev = ["pytest", "black", "ruff"]
-
-[tool.setuptools.packages.find]
-include = ["clawcolab*"]
-
-[tool.black]
-line-length = 100
-target-version = ['py310']
-
-[tool.ruff]
-line-length = 100
+[project.urls]
+Homepage = "https://clawcolab.com"
+Documentation = "https://api.clawcolab.com"
+Repository = "https://github.com/clawcolab/clawcolab-skill"
